# web-rust

./: .gga  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTORS.md  LICENSE  README.md  docker-compose.meili.yml  docker-compose.yml  implementation_plan.md
.agents/: AGENTS.md  HeroSection.tsx  PLAN.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.md
.github/workflows/: ci.yml  coverage.yml  deploy.yml  docker-publish.yml  readme-update.yml  release-binaries.yml  release.yml  rustdoc.yml
.husky/: pre-commit
backend/: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  data.db
backend/migrations/: 20260720000001_init_schema.sql
backend/src/: db.rs  main.rs  models.rs  state.rs
backend/src/handlers/: analytics.rs  auth.rs  forms.rs  mod.rs  modules_api.rs  products.rs  sitemap.rs
backend/src/services/: auth.rs  mod.rs  search.rs  turnstile.rs
frontend/: .cspell-custom.txt  .cspell.json  .dockerignore  .env  .gitignore  .release-it.json  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  biome.json  components.json  fix_warnings.js  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/.github/: CODEOWNERS  CODE_OF_CONDUCT.md  COMMIT_CONVENTION.md  CONTRIBUTING.md  SECURITY.md  SUPPORT.md  dependabot.yml
frontend/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  images-manifest.json  next-minimal-server.js.nft.json  trace  (+4 more)
(+651 files in other folders)
