[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "trace"] }
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tracing = "0.1.44"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
tower_governor = "0.8"
sha2 = "0.11.0"
hex = "0.4.3"
chrono = "0.4.45"
